testsuite/tests/rename/should_fail/T5892a.stderr

T5892a.hs:12:8: warning: [-Wmissing-fields (in -Wdefault)]
    • Fields of ‘Node’ not initialised: subForest
    • In the expression: Node {..}
      In the expression: let rootLabel = [] in Node {..}
      In an equation for ‘foo’:
          foo (Node {..}) = let rootLabel = ... in Node {..}

<no location info>: error: 
Failing due to -Werror.
